--- a/Prototype/public/feed.css
+++ b/Prototype/public/feed.css
@@ -39,6 +39,18 @@
 
 #feed {
     flex: 2;
+    /* height: 1000px; Set a fixed height for the feed */
+    overflow-y: auto; /* Enable vertical scrolling */
+}
+
+#feed::-webkit-scrollbar,
+#private-messages::-webkit-scrollbar{
+    display: none;
+}
+
+#private-messages {
+    height: 1000px; /* Set a fixed height for private messages */
+    overflow-y: auto; /* Enable vertical scrolling */
 }
 
 #comments {
