--- a/Prototype/public/feed.css
+++ b/Prototype/public/feed.css
@@ -40,6 +40,7 @@
 #feed {
     flex: 2;
     /* height: 1000px; Set a fixed height for the feed */
+    
     overflow-y: auto; /* Enable vertical scrolling */
 }
 
@@ -51,6 +52,9 @@
 #private-messages {
     height: 1500px; /* Set a fixed height for private messages */
     overflow-y: auto; /* Enable vertical scrolling */
+    /* border-left: 12px solid #0f2044; 
+    border-radius: 10px; */
+    /* box-shadow: inset 0 0 0 2px yellow; */
 }
 
 #comments {
@@ -59,3 +63,18 @@
     align-items: center;
 }
 
+/* #feed-header, #private-messages-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+} */
+
+.users {
+    border-left: 12px solid #0f2044; 
+    border-bottom: 12px solid #0f2044; 
+    border-radius: 10px;
+    box-shadow: 
+        inset 2px 0 0 yellow, 
+        0 2px 0 yellow;   
+}
