--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -441,8 +441,42 @@
         <% if (convUsers) { %>
         <ul class="users">
           <% convUsers.forEach(user=> { %>
-          <li class="user-info">
-            <a href="/account/<%= user.otherUser.userId %>">
+            
+            <div style=" position: relative; margin-bottom: 80px; display: flex; flex-direction: column;">
+              <div style="width: 351px; height: 75px; left: 7px; top: 7px; position: absolute; background: #16316b; box-shadow: 0px 0px 0px 7px rgba(0, 0, 0, 0.25); border-radius: 138px; border: 3px #E1E118 solid"></div>
+              <div class="grows" style="width: 40px; height: 40px; left: 29px; top: 24px; position: absolute; background: #D9D9D9; border-radius: 9999px">
+                <a href="/account/<%= user.otherUser.userId %>">
+                  <img
+                    src="/images/<%= user.otherUser.profilePic %>"
+                    class="rounded-circle"
+                    alt="profile"
+                    class="rounded-circle"
+                    alt="profile"
+                    style="width: 100%; height: 100%; object-fit: cover;"> 
+                </a>
+              </div>
+              <div style="width: 220px; height: 30px; left: 77px; top: 34px; position: absolute;">
+                <a href="/account/<%= user.otherUser.userId %>">
+                
+                  <span class="pm-name">
+                    <%= user.otherUser.fname + " " + user.otherUser.lname %>
+                  </span>                
+              </a>
+              </div>
+              <div  style="width: 17px; height: 16px; left: 264px; top: 21px; position: absolute; background: #dbd1d1; z-index: 1;"></div>
+              <form action="/getMessagePage" method="GET">
+                <input type="hidden" name="convId" value="<%= user.convId %>" />
+                <button type="submit" style="left: 271px; top: 29px; position: absolute; border: none; background: none; padding: 0;">
+                  <img class="grows" src="/images/mail.png" alt="Message Icon" style="width: 40px; height: 40px;">
+                </button>
+              </form>
+              
+              <div style="width: 17px; height: 17px; left: 266px; top: 21px; position: absolute; z-index: 1; color: black; font-size: 12px; font-family: Inter; font-weight: bold; word-wrap: break-word">
+                <%= user.unreadCount %>
+              </div>
+            </div>
+          <!-- <li class="user-info"> -->
+            <!-- <a href="/account/<%= user.otherUser.userId %>">
               <img
                 src="/images/<%= user.otherUser.profilePic %>"
                 class="rounded-circle"
@@ -457,8 +491,8 @@
             <form action="/getMessagePage" method="GET">
               <input type="hidden" name="convId" value="<%= user.convId %>" />
               <button type="submit" class="btn btn-primary">Message</button>
-            </form>
-          </li>
+            </form> -->
+          <!-- </li> -->
           <br />
           <% }) %>
         </ul>
