--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -9,6 +9,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/public/home.css" />
   <script src="/public/script.js" defer></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 </head>
 
 <body>
@@ -469,9 +473,10 @@
                   <option value="<%= post.userId %>">
                     <%= post.fname + " " + post.lname %>
                   </option>
-                <% }); %>
+                  <% }); %>
               </select>
             </div>
+            <hr>
             <div class="mb-3">
               <label for="filterCourseSelect" class="form-label">Select Course</label>
               <select class="form-select" id="filterCourseSelect" name="courseId">
@@ -480,9 +485,10 @@
                   <option value="<%= post.courseId %>">
                     <%= post.courseId %>
                   </option>
-                <% }); %>
+                  <% }); %>
               </select>
             </div>
+            <hr>
             <div class="mb-3">
               <label for="filterTitleSelect" class="form-label">Select Title</label>
               <select class="form-select" id="filterTitleSelect" name="title">
@@ -491,9 +497,15 @@
                   <option value="<%= post.title %>">
                     <%= post.title %>
                   </option>
-                <% }); %>
+                  <% }); %>
               </select>
             </div>
+            <hr>
+            <div class="mb-3">
+              <label for="filterDateRange" class="form-label">Select Date </label><br>
+                <input type="text" name="daterange" value="" />
+            </div>
+
             <div class="d-flex justify-content-end">
               <button type="submit" class="btn btn-primary" id="filterButton">Apply Filter</button>
             </div>
@@ -526,7 +538,17 @@
     function setFlagModalValues(postId) {
       document.getElementById("flagPostId").value = postId;
     }
+
+    $(function () {
+      $('input[name="daterange"]').daterangepicker({
+        opens: 'left'
+      }, function (start, end, label) {
+        console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
+      });
+    });
   </script>
+
+
 </body>
 
 </html>
